tests/example_policies/testcase4/testcase4-networkpolicy3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-specific-pods-in-external-namespace
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: vendor-systemNameSpace
        podSelector:
          matchLabels:
            weird-lb-app-name: keepalived
