tests/example_policies/testcase4/testcase4-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase4-networkpolicy1.yaml
    expected_warnings: 0

  - name: np2
    networkPolicyList:
      - testcase4-networkpolicy2.yaml
    expected_warnings: 0

  - name: np3
    networkPolicyList:
      - testcase4-networkpolicy3.yaml
    expected_warnings: 1

queries:
  - name: redundancy_all
    redundancy:
      - np1
      - np2
      - np3
    expected: 0
  - name: no_vacuity
    vacuity:
      - np1
      - np2
      - np3
    expected: 0

  - name: compare_all
    equivalence:
      - np1
      - np2
      - np3
    expected: 0
  - name: pairwiseInterferes_np1_and_np2
    pairwiseInterferes:
      - np1
      - np2
    expected: 0
  - name: emptiness
    emptiness:
      - np1
      - np2
    expected: 0
  - name: containment_np1_and_np2
    containment:
      - np1
      - np2
    expected: 1
  - name: containment_np2_and_np1
    containment:
      - np2
      - np1
    expected: 1
